--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
-    "release": "changeset publish"
+    "release": "changeset publish",
+    "trunk": "trunk",
+    "lint": "trunk check",
+    "fmt": "trunk fmt"
   },
   "peerDependencies": {
     "next": "^14.0.0",
@@ -23,12 +26,22 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.11",
+    "@trunkio/launcher": "^1.3.4",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.20",
+    "markdownlint-cli": "^0.39.0",
     "postcss": "^8.4.49",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
     "tsup": "^8.3.5",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "yaml-lint": "^1.7.0"
+  },
+  "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0"
   }
 }
