--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "fmt": "trunk fmt"
   },
   "peerDependencies": {
-    "next": "^14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "tailwindcss": "^3.0.0"
+    "next": "^15.1.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.11",
@@ -42,6 +42,18 @@
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0"
+    "clsx": "^2.1.0",
+    "@radix-ui/react-select": "^2.0.0",
+    "lucide-react": "^0.469.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@rainbow-me/rainbowkit": "^2.0.1",
+    "viem": "^2.7.9",
+    "wagmi": "^2.5.7"
   }
 }
