--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -16,6 +16,8 @@ runtimes:
     - python@3.10.8
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
+  ignore:
+    - .reference/**/*
   enabled:
     - actionlint@1.7.4
     - checkov@3.2.342
