--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
   "name": "@mento-labs/ui-toolkit",
   "version": "0.1.0",
+  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "sideEffects": false,
   "license": "MIT",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/",
     "scope": "@mento-labs"
   },
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "files": [
     "dist/**"
   ],
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
+    "build": "bunchee",
+    "dev": "next dev",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "release": "changeset publish",
     "trunk": "trunk",
@@ -37,11 +44,11 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.20",
+    "bunchee": "^6.0.3",
     "markdownlint-cli": "^0.39.0",
     "postcss": "^8.4.49",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
-    "tsup": "^8.3.5",
     "typescript": "^5.7.2",
     "yaml-lint": "^1.7.0"
   },
@@ -55,6 +62,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@rainbow-me/rainbowkit": "^2.0.1",
+    "@tanstack/react-query": "^5.62.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.15.0",
