--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "autoprefixer": "^10.4.20",
     "bunchee": "^6.0.3",
     "markdownlint-cli": "^0.39.0",
+    "pino-pretty": "^13.0.0",
     "postcss": "^8.4.49",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
@@ -53,6 +54,7 @@
     "yaml-lint": "^1.7.0"
   },
   "dependencies": {
+    "@mento-protocol/mento-sdk": "^1.0.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
