--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mento-protocol/ui-toolkit",
-  "version": "0.1.2",
+  "version": "0.1.5",
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -33,16 +33,31 @@
     "fmt": "trunk fmt"
   },
   "peerDependencies": {
-    "next": "^15.1.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.17"
+    "next": "^13.0.0 || ^14.0.0 || ^15.0.0",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
+    "tailwindcss": "^3.0.0",
+    "@rainbow-me/rainbowkit": "^2.0.0",
+    "@tanstack/react-query": "^5.0.0",
+    "viem": "^2.0.0",
+    "wagmi": "^2.0.0",
+    "framer-motion": "^11.0.0",
+    "next-themes": "^0.4.0"
+  },
+  "peerDependenciesMeta": {
+    "framer-motion": {
+      "optional": true
+    },
+    "next-themes": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.11",
     "@trunkio/launcher": "^1.3.4",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.20",
@@ -53,10 +68,16 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
-    "yaml-lint": "^1.7.0"
+    "yaml-lint": "^1.7.0",
+    "@rainbow-me/rainbowkit": "^2.0.1",
+    "@tanstack/react-query": "^5.62.10",
+    "viem": "^2.7.9",
+    "wagmi": "^2.5.7",
+    "framer-motion": "11.5.4",
+    "next-themes": "^0.4.4"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.0",
+    "@headlessui/react": "1.7.19",
     "@mdxeditor/editor": "^3.21.4",
     "@mento-protocol/mento-sdk": "^1.0.1",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -75,18 +96,14 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@rainbow-me/rainbowkit": "^2.0.1",
-    "@tanstack/react-query": "^5.62.10",
     "blo": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
-    "next-themes": "^0.4.4",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^9.5.1",
     "react-hook-form": "^7.54.2",
-    "sonner": "^1.7.4",
-    "viem": "^2.7.9",
-    "wagmi": "^2.5.7"
+    "react-markdown": "^9.0.3",
+    "sonner": "^1.7.4"
   }
 }
