--- a/package.json
+++ b/package.json
@@ -33,16 +33,17 @@
     "fmt": "trunk fmt"
   },
   "peerDependencies": {
-    "next": "^13.0.0 || ^14.0.0 || ^15.0.0",
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0",
-    "tailwindcss": "^3.0.0",
     "@rainbow-me/rainbowkit": "^2.0.0",
     "@tanstack/react-query": "^5.0.0",
-    "viem": "^2.0.0",
-    "wagmi": "^2.0.0",
+    "@types/react": "^18.2.0",
     "framer-motion": "^11.0.0",
-    "next-themes": "^0.4.0"
+    "next": "^13.0.0 || ^14.0.0 || ^15.0.0",
+    "next-themes": "^0.4.0",
+    "react": "18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.0.0",
+    "viem": "^2.0.0",
+    "wagmi": "^2.0.0"
   },
   "peerDependenciesMeta": {
     "framer-motion": {
@@ -54,27 +55,29 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.11",
+    "@rainbow-me/rainbowkit": "^2.0.1",
+    "@tanstack/react-query": "^5.62.10",
     "@trunkio/launcher": "^1.3.4",
     "@types/node": "^22.10.2",
-    "@types/react": "^19.0.2",
+    "@types/react": "^18.2.0",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.20",
     "bunchee": "^6.0.3",
+    "framer-motion": "11.5.4",
     "markdownlint-cli": "^0.39.0",
+    "next-themes": "^0.4.4",
     "pino-pretty": "^13.0.0",
     "postcss": "^8.4.49",
+    "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
-    "yaml-lint": "^1.7.0",
-    "@rainbow-me/rainbowkit": "^2.0.1",
-    "@tanstack/react-query": "^5.62.10",
     "viem": "^2.7.9",
     "wagmi": "^2.5.7",
-    "framer-motion": "11.5.4",
-    "next-themes": "^0.4.4"
+    "yaml-lint": "^1.7.0"
   },
   "dependencies": {
     "@headlessui/react": "1.7.19",
@@ -96,6 +99,7 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tailwindcss/typography": "^0.5.16",
     "blo": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -104,6 +108,7 @@
     "react-day-picker": "^9.5.1",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
-    "sonner": "^1.7.4"
+    "sonner": "^1.7.4",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
