--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,14 +26,14 @@
       "@/components/*": [
         "./src/components/*"
       ],
+      "@/config/*": [
+        "./src/config/*"
+      ],
       "@/themes/*": [
         "./src/themes/*"
       ],
       "@/utils/*": [
         "./src/utils/*"
-      ],
-      "@/components/web3/*": [
-        "./src/components/web3/*"
       ],
     },
     "noEmit": true,
