--- a/package.json
+++ b/package.json
@@ -16,21 +16,30 @@
       "import": "./dist/index.js",
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
+    },
+    "./*.css": {
+      "import": "./dist/*.css",
+      "require": "./dist/*.css"
     }
   },
   "files": [
-    "dist/**"
+    "dist/**",
+    "src/app/globals.css",
+    "dist/globals.css"
   ],
   "scripts": {
-    "build": "pnpm build:clean && pnpm build:bundle",
-    "build:clean": "rm -rf dist",
+    "build": "pnpm build:clean && pnpm build:bundle && cp src/app/globals.css dist/globals.css",
+    "build:clean": "rm -rf dist && mkdir dist",
     "build:bundle": "bunchee",
     "dev": "next dev",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "release": "changeset publish",
     "trunk": "trunk",
-    "lint": "trunk check",
-    "fmt": "trunk fmt"
+    "lint": "pnpm lint:js && pnpm lint:secrets",
+    "lint:js": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint:secrets": "npx secretlint \"**/*\"",
+    "fmt": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "peerDependencies": {
     "@rainbow-me/rainbowkit": "^2.0.0",
@@ -77,7 +86,14 @@
     "typescript": "^5.7.2",
     "viem": "^2.7.9",
     "wagmi": "^2.5.7",
-    "yaml-lint": "^1.7.0"
+    "yaml-lint": "^1.7.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.1",
+    "prettier-plugin-tailwindcss": "^0.5.13",
+    "@secretlint/secretlint-rule-preset-recommend": "^8.1.2"
   },
   "dependencies": {
     "@headlessui/react": "1.7.19",
@@ -105,7 +121,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-day-picker": "^9.5.1",
+    "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
     "sonner": "^1.7.4",
