--- a/package.json
+++ b/package.json
@@ -2,44 +2,42 @@
   "name": "@mento-protocol/ui-toolkit",
   "version": "0.1.5",
   "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "license": "MIT",
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/",
-    "scope": "@mento-protocol"
-  },
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
     },
-    "./*.css": {
-      "import": "./dist/*.css",
-      "require": "./dist/*.css"
+    "./styles": {
+      "import": "./dist/styles/index.css",
+      "require": "./dist/styles/index.css"
+    },
+    "./configs/*": {
+      "types": "./dist/configs/*.d.ts",
+      "import": "./dist/configs/*.mjs",
+      "require": "./dist/configs/*.cjs"
     }
   },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "files": [
-    "dist/**",
-    "src/app/globals.css",
-    "dist/globals.css"
+    "dist",
+    "src",
+    "configs",
+    ".eslintrc.json",
+    ".prettierrc"
   ],
   "scripts": {
-    "build": "pnpm build:clean && pnpm build:bundle && cp src/app/globals.css dist/globals.css",
-    "build:clean": "rm -rf dist && mkdir dist",
-    "build:bundle": "bunchee",
-    "dev": "next dev",
-    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
-    "release": "changeset publish",
-    "trunk": "trunk",
-    "lint": "pnpm lint:js && pnpm lint:secrets",
-    "lint:js": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "lint:secrets": "npx secretlint \"**/*\"",
-    "fmt": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --config configs/eslint.config.ts",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --config configs/eslint.config.ts --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --config configs/prettier.config.ts",
+    "typecheck": "tsc --noEmit",
+    "clean": "rm -rf dist",
+    "verify": "node verify-build.js",
+    "prepublishOnly": "pnpm clean && pnpm build && pnpm verify"
   },
   "peerDependencies": {
     "@rainbow-me/rainbowkit": "^2.0.0",
@@ -65,35 +63,34 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.11",
     "@rainbow-me/rainbowkit": "^2.0.1",
+    "@secretlint/secretlint-rule-preset-recommend": "^8.1.2",
     "@tanstack/react-query": "^5.62.10",
     "@trunkio/launcher": "^1.3.4",
     "@types/node": "^22.10.2",
     "@types/react": "^18.2.0",
     "@types/react-copy-to-clipboard": "^5.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "autoprefixer": "^10.4.20",
-    "bunchee": "^6.0.3",
+    "eslint": "^9.20.1",
+    "eslint-config-next": "^15.1.7",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "framer-motion": "11.5.4",
-    "markdownlint-cli": "^0.39.0",
     "next-themes": "^0.4.4",
     "pino-pretty": "^13.0.0",
     "postcss": "^8.4.49",
+    "prettier": "^3.2.1",
+    "prettier-plugin-tailwindcss": "^0.5.13",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
+    "tsup": "^8.3.6",
     "typescript": "^5.7.2",
     "viem": "^2.7.9",
     "wagmi": "^2.5.7",
-    "yaml-lint": "^1.7.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.1",
-    "prettier-plugin-tailwindcss": "^0.5.13",
-    "@secretlint/secretlint-rule-preset-recommend": "^8.1.2"
+    "yaml-lint": "^1.7.0"
   },
   "dependencies": {
     "@headlessui/react": "1.7.19",
