--- a/package.json
+++ b/package.json
@@ -37,16 +37,20 @@
     "typecheck": "tsc --noEmit",
     "clean": "rm -rf dist",
     "verify": "node verify-build.js",
-    "prepublishOnly": "pnpm clean && pnpm build && pnpm verify"
+    "prepublishOnly": "pnpm clean && pnpm build && pnpm verify",
+    "version-packages": "changeset version",
+    "release": "changeset publish"
   },
   "peerDependencies": {
     "@rainbow-me/rainbowkit": "^2.0.0",
     "@tanstack/react-query": "^5.0.0",
     "@types/react": "^18.2.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^11.0.0",
     "next": "^13.0.0 || ^14.0.0 || ^15.0.0",
     "next-themes": "^0.4.0",
     "react": "18.2.0",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.0.0",
     "viem": "^2.0.0",
@@ -72,6 +76,7 @@
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "autoprefixer": "^10.4.20",
+    "date-fns": "^2.30.0",
     "eslint": "^9.20.1",
     "eslint-config-next": "^15.1.7",
     "eslint-config-prettier": "^10.0.1",
@@ -83,6 +88,7 @@
     "prettier": "^3.2.1",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "react": "18.2.0",
+    "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
@@ -118,7 +124,6 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
     "sonner": "^1.7.4",
