--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mento-protocol/ui-toolkit",
-  "version": "0.1.6",
+  "version": "0.1.5",
   "type": "module",
   "exports": {
     ".": {
@@ -25,15 +25,14 @@
     "dist",
     "src",
     "configs",
-    ".eslintrc.json",
     ".prettierrc"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "pnpm clean && pnpm tsup",
     "dev": "tsup --watch",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --config configs/eslint.config.ts",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --config configs/eslint.config.ts --fix",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --config configs/prettier.config.ts",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "typecheck": "tsc --noEmit",
     "clean": "rm -rf dist",
     "verify": "node verify-build.js",
@@ -50,7 +49,6 @@
     "next": "^13.0.0 || ^14.0.0 || ^15.0.0",
     "next-themes": "^0.4.0",
     "react": "18.2.0",
-    "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.0.0",
     "viem": "^2.0.0",
@@ -88,7 +86,6 @@
     "prettier": "^3.2.1",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "react": "18.2.0",
-    "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
