--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
     "sonner": "^1.7.4",
